--- a/licensing-service.properties
+++ b/licensing-service.properties
@@ -1,4 +1,3 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 example.property=I AM THE DEFAULT
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database=POSTGRESQL
@@ -6,7 +5,7 @@ spring.datasource.platform=postgres
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.database.driverClassName=org.postgresql.Driver
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
 spring.cloud.loadbalancer.ribbon.enabled=false
