--- a/gateway-server.yml
+++ b/gateway-server.yml
@@ -1,5 +1,6 @@
 server:
     port: 8072
+
 eureka:
     instance:
         preferIpAddress: true
@@ -8,3 +9,10 @@ eureka:
         fetchRegistry: true
         serviceUrl:
             defaultZone: http://eurekaserver:8070/eureka/
+
+spring:
+    cloud:
+        gateway:
+            discovery.locator:
+                enabled: true
+                lowerCaseServiceId: true
