--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -12,3 +12,9 @@ eureka:
                 http://${eureka.instance.hostname}:${server.port}/eureka/
     server:
         waitTimeInMsWhenSyncEmpty: 5
+        
+management:
+    endpoints:
+        web:
+            exposure:
+                include: "*"
